# X-CURSOR

./: .gitignore  LICENSE  README.md
dashboard/: package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/client/: index.html
dashboard/client/src/: App.tsx  index.css
dashboard/client/src/components/layout/: DashboardLayout.tsx  Header.tsx  Sidebar.tsx
dashboard/client/src/components/shared/: CursorAuthModal.tsx  KiroAuthModal.tsx  OAuthModal.tsx  PricingModal.tsx
dashboard/client/src/data/: mock-data.ts
dashboard/client/src/pages/: ApiKeys.tsx  Billing.tsx  Combos.tsx  Dashboard.tsx  Features.tsx  Login.tsx  Logs.tsx  Models.tsx  ProviderDetail.tsx  Providers.tsx  Routing.tsx  Settings.tsx  Usage.tsx  Users.tsx
dashboard/client/src/types/: index.ts
dashboard/server/: routes.ts
docs/: athas-analysis.md  cursor-api-reference.md  cursor-features-analysis.md
ide/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ide/src/: App.tsx  index.css
ide/src-tauri/: Cargo.toml  tauri.conf.json
ide/src-tauri/capabilities/: default.json
ide/src-tauri/src/: lib.rs  main.rs
ide/src/features/agent/components/: AgentPanel.tsx  ToolExecution.tsx
ide/src/features/agent/store/: agent-store.ts
ide/src/features/ai/components/: AIChatPanel.tsx  ChatInput.tsx  ChatMessage.tsx  ProviderSelector.tsx
ide/src/lib/: utils.ts
ide/src/lib/cursor-api/: auth.ts  client.ts  headers.ts  transport.ts  types.ts
ide/src/ui/: button.tsx  dialog.tsx  input.tsx  tabs.tsx  tooltip.tsx
tests/: test-system.mjs
(+24 files in other folders)
